Fixed overflow sidebar issue

--- a/button11/style.css
+++ b/button11/style.css
@@ -40,6 +40,7 @@ body {
   top: 0;
   align-self: start;
   transition: 300ms ease-in-out;
+  overflow: hidden;
 }
 
 #sidebar.close {
